--- a/style.css
+++ b/style.css
@@ -69,6 +69,13 @@ a {
 
 /* LANDING PAGE */
 
+.landing-page {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: 0 240px 0 240px;
+}
+
 h1 {
   font-family: Helvetica;
   font-size: 80px;
@@ -77,16 +84,21 @@ h1 {
   max-width: 650px;
 }
 
-section > p {
+.main-about {
   font-size: 18px;
   max-width: 380px;
   color: #4b5d68;
+  padding: 50px 0;
 }
 
-section > a {
+.main-button {
   background: #9c69e2;
+  color: #ffffff;
   font-size: 18px;
-  width: 170px;
-  height: 60px;
+  padding: 16px 37px;
   border-radius: 30px;
+}
+
+img {
+  margin-top: 250px;
 }
