--- a/style.css
+++ b/style.css
@@ -99,6 +99,54 @@ h1 {
   border-radius: 30px;
 }
 
-img {
+.photo-one {
   margin-top: 250px;
+}
+
+.container {
+  width: 1117px;
+  height: 560px;
+  border-radius: 50px;
+  background: #f063b826;
+  margin: 100px auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.pink-textbox {
+  max-width: 475px;
+}
+
+.pink-header {
+  font-size: 40px;
+  color: #212353;
+  font-weight: bold;
+}
+
+.pink-about {
+  font-size: 18px;
+  color: #4b5d68;
+  padding-top: 40px;
+  text-align: justify;
+}
+
+.features {
+  margin: 150px 0 120px 0;
+}
+
+.header-features {
+  font-size: 40px;
+  font-weight: bold;
+  color: #212353;
+  text-align: center;
+}
+
+.about-features {
+  max-width: 584px;
+  font-size: 18px;
+  color: #4b5d68;
+  padding-top: 50px;
+  text-align: center;
+  margin: 0 auto;
 }
