--- a/style.css
+++ b/style.css
@@ -156,3 +156,14 @@ h1 {
   text-align: center;
   margin: 0 auto;
 }
+
+.line {
+  width: 100%;
+  height: 2px;
+  background-color: rgba(156, 105, 226, 0.2);
+  margin: 150px 0 100px 0;
+}
+
+/* Footer */
+
+/* end */
