--- a/style.css
+++ b/style.css
@@ -186,6 +186,27 @@ h1 {
   padding-top: 20px;
 }
 
+.footer-button-one {
+  font-size: 18px;
+  color: #ffffff;
+  background: #f063b8;
+  padding: 21px 37px;
+  border-radius: 50px;
+  margin-right: 30px;
+}
+
+.footer-button-two {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 210px;
+  height: 60px;
+  background-color: #ffffff;
+  border-radius: 30px;
+  box-shadow: 0 5px 5px 0 rgba(75, 93, 104, 0.1);
+  font-family: Helvetica;
+}
+
 .buttons {
   display: flex;
   justify-content: center;
