--- a/style.css
+++ b/style.css
@@ -155,6 +155,11 @@ h1 {
   margin: 0 auto;
 }
 
+.grid-container {
+  width: 1117px;
+  margin: 0 auto;
+}
+
 .line {
   width: 100%;
   height: 2px;
