--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ a {
 .fa-arrow-right {
   font-size: 25px;
   color: #9c69e2;
-  margin-left: 20px;
+  padding-left: 20px;
 }
 
 .right {
@@ -155,19 +155,211 @@ h1 {
   margin: 0 auto;
 }
 
-.rectangle {
+/* rectangle start */
+
+.lm-container {
   width: 1117px;
-  margin: 0 auto;
-  grid-template-columns: auto auto;
+  margin: 100px auto;
+}
+
+.offer-grid {
   display: grid;
+  grid-template-columns: auto auto;
+  gap: 60px;
+}
+
+.offer-one {
+  display: flex;
+  align-items: center;
   justify-content: space-between;
-  row-gap: 50px;
+  position: relative;
 }
 
-.rectangle-text {
-  max-width: 220px;
+.green {
+  background: url("./images/rectangle.png") no-repeat top right;
 }
 
+.purple {
+  background: url("./images/rectangle-two.png") no-repeat top right;
+}
+
+.pink {
+  background: url("./images/rectangle-three.png") no-repeat top right;
+}
+
+.blue {
+  background: url("./images/rectangle-four.png") no-repeat top right;
+}
+
+.textbox-offer {
+  padding: 70px 45px 0 30px;
+  z-index: 10;
+}
+
+.offer-photo-four {
+  z-index: 10;
+}
+
+.vector {
+  position: absolute;
+  z-index: 0;
+}
+
+.one {
+  top: 20px;
+  right: 20px;
+}
+
+.two {
+  right: 10px;
+  bottom: 100px;
+}
+
+.three {
+  right: 25px;
+  top: 25px;
+}
+
+.four {
+  left: 140px;
+  top: 30px;
+}
+
+.offer-heading {
+  font-size: 24px;
+  color: #212353;
+}
+
+.offer-paragraph {
+  font-size: 16px;
+  color: #4b5d68;
+  line-height: 26px;
+  width: 200px;
+  height: 160px;
+  padding: 20px 0;
+}
+
+.offer-button {
+  display: flex;
+  align-items: center;
+  padding-bottom: 120px;
+}
+
+.button-text-offer {
+  font-size: 18px;
+  color: #212353;
+  font-weight: bold;
+}
+
+.offer-photo-two,
+.offer-photo-four {
+  margin-bottom: 50px;
+}
+
+/* end retangle  */
+
+/* start slider */
+
+.slider-container {
+  width: 1117px;
+  height: 709px;
+  border-radius: 50px;
+  background: #9c69e2;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: column;
+}
+
+.slider-heading,
+.box-one,
+.slider-shapes {
+  margin-left: 90px;
+}
+
+.slider-heading {
+  font-size: 40px;
+  font-weight: bold;
+  color: #ffffff;
+}
+
+.box-one {
+  width: 645px;
+  height: 330px;
+  border-radius: 20px;
+  background: #ffffff;
+  box-shadow: 0 20px rgba(156, 105, 226, 0.3);
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.full-name {
+  font-size: 18px;
+  font-weight: bold;
+  color: #212353;
+}
+
+.slider-sub {
+  font-size: 14px;
+  color: #9c69e2;
+  padding: 10px 0 20px 0;
+}
+
+.slider-about {
+  font-size: 18px;
+  color: #4b5d68;
+  font-weight: 400;
+  line-height: 32px;
+  width: 385px;
+}
+
+.person-one {
+  margin-bottom: 120px;
+}
+
+.dots {
+  width: 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.white-dot {
+  width: 5px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background: #ffffff;
+}
+
+.pink-dot {
+  width: 10px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background: #f063b8;
+}
+
+.slider-shapes {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.arrows {
+  margin-right: 90px;
+}
+
+#white-arrow,
+.fa-arrow-left-long {
+  font-size: 24px;
+  color: #ffffff;
+}
+
+#white-arrow {
+  opacity: 0.5;
+}
+
+/* end slider */
 .line {
   width: 100%;
   height: 2px;
