--- a/style.css
+++ b/style.css
@@ -71,11 +71,11 @@ a {
 
 /* LANDING PAGE */
 
-.landing-page {
+.landing-container {
+  margin: 0 auto;
+  width: 1117px;
   display: flex;
-  justify-content: space-evenly;
   align-items: center;
-  margin: 0 240px 0 240px;
 }
 
 h1 {
@@ -83,7 +83,7 @@ h1 {
   font-size: 80px;
   font-weight: bold;
   color: #212353;
-  max-width: 650px;
+  width: 580px;
 }
 
 .main-about {
@@ -103,7 +103,8 @@ h1 {
 }
 
 .photo-one {
-  margin-top: 250px;
+  margin-top: 200px;
+  margin-left: -200px;
 }
 
 .container {
@@ -269,6 +270,17 @@ h1 {
   display: flex;
   justify-content: space-evenly;
   flex-direction: column;
+  position: relative;
+}
+
+.slider-boxes {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  width: 1400px;
+  height: 450px;
+  overflow: hidden;
 }
 
 .slider-heading,
@@ -283,15 +295,37 @@ h1 {
   color: #ffffff;
 }
 
-.box-one {
-  width: 645px;
+.box-one,
+.box-two,
+.box-three {
   height: 330px;
   border-radius: 20px;
   background: #ffffff;
-  box-shadow: 0 20px rgba(156, 105, 226, 0.3);
+  box-shadow: 0 20px rgba(156, 105, 226, 0.1);
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  position: relative;
+  z-index: 10;
+}
+
+.box-one {
+  width: 645px;
+}
+
+.box-two {
+  right: 230px;
+}
+
+.box-three {
+  right: -200px;
+}
+
+.box-two,
+.box-three {
+  position: absolute;
+  width: 400px;
+  border: #9c69e2 solid 1px;
 }
 
 .full-name {
@@ -306,12 +340,23 @@ h1 {
   padding: 10px 0 20px 0;
 }
 
-.slider-about {
+.slider-about,
+.slider-about-two,
+.slider-about-three {
   font-size: 18px;
   color: #4b5d68;
   font-weight: 400;
   line-height: 32px;
-  width: 385px;
+  height: 130px;
+}
+
+.slider-about {
+  width: 345px;
+}
+
+.slider-about-two,
+.slider-about-three {
+  width: 180px;
 }
 
 .person-one {
@@ -372,6 +417,10 @@ h1 {
   width: 1117px;
   margin: 0 auto;
   height: 800px;
+}
+
+.footer-one,
+.footer-three {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -414,5 +463,21 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.all-rights {
+  font-size: 12px;
+  line-height: 22px;
+  letter-spacing: 1%;
+  color: #212353;
+  width: 250px;
+}
+
+.fa-comment-dots {
+  color: #9c69e2;
+  font-size: 35px;
+  background: rgba(156, 105, 226, 0.2);
+  padding: 15px;
+  border-radius: 50%;
 }
 /* end */
